--- a/index.html
+++ b/index.html
@@ -14,62 +14,67 @@
 
 </head>
 <body>
-  <div class="container">
-    <div class="daniel">
-      <img src="images/image-daniel.jpg" alt="Profile Picture" class="profile-pic">
-      <h1 class="name">Daniel Clifford</h1>
-      <p class="position">Verified Graduate</p>
-      <p class="bold-description">I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-        in the company I joined. I honestly feel I got every penny’s worth.</p>
-      <p class="description"> I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-        transition and have heard some people who had an amazing experience here. I signed up 
-        for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-        The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-        the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
-    </div>
-    <div class="jonathan">
-      <img src="images/image-jonathan.jpg" alt="Profile Picture" class="profile-pic">
-      <h1 class="name">Jonathan Walters</h1>
-      <p class="position">Verified Graduate</p>
-      <p class="bold-description">The team was very supportive and kept me motivated</p>
-      <p class="description"> “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-        for a big company. This was one of the best investments I’ve made in myself. ”</p>
-    </div>
-    <div class="kira">
-      <img src="images/image-kira.jpg" alt="Profile Picture" class="profile-pic">
-      <h1 class="name">Kira Whittle</h1>
-      <p class="position">Verified Graduate</p>
-      <p class="bold-description">Such a life-changing experience. Highly recommended!</p>
-      <p class="description">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-        professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-        student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-        did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-        project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-        could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-        experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-        100% recommend! ”</p>
-    </div>
-    <div class="patrick">
-      <img src="images/image-patrick.jpg" alt="Profile Picture" class="profile-pic">
-      <h1 class="name">Patrick Abrams</h1>
-      <p class="position">Verified Graduate</p>
-      <p class="bold-description">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-        learning from their experiences was easy.</p>
-      <p class="description">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-        gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-        junior developer. The standard is above the rest. You will get the personal attention you need from 
-        an incredible community of smart and amazing people. ”</p>
-    </div>
-    <div class="jeanette">
-      <img src="images/image-jeanette.jpg" alt="Profile Picture" class="profile-pic">
-      <h1 class="name">Jeanette Harmon</h1>
-      <p class="position">Verified Graduate</p>
-      <p class="bold-description">An overall wonderful and rewarding experience</p>
-      <p class="description">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-        while doing something I love. ”</p>
-    </div>
+    <div class="grid">
 
-  </div>
+      <div class="daniel testimonial">
+        <img src="images/image-daniel.jpg" alt="Profile Picture" class="profile-pic">
+        <h1 class="name text-white">Daniel Clifford</h1>
+        <p class="verified text-white">Verified Graduate</p>
+        <p class="bold-testimonial text-white">I received a job offer mid-course, and the subjects I learned were current, if not more so, 
+          in the company I joined. I honestly feel I got every penny’s worth.</p>
+        <p class="description text-gray">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
+          transition and have heard some people who had an amazing experience here. I signed up 
+          for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
+          The next 12 weeks was the best - and most grueling - time of my life. Since completing 
+          the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
+      </div>
+
+      <div class="jonathan testimonial">
+        <img src="images/image-jonathan.jpg" alt="Profile Picture" class="profile-pic">
+        <h1 class="name text-white">Jonathan Walters</h1>
+        <p class="verified text-white">Verified Graduate</p>
+        <p class="bold-testimonial text-white">The team was very supportive and kept me motivated</p>
+        <p class="description text-gray"> “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
+          for a big company. This was one of the best investments I’ve made in myself. ”</p>
+      </div>
+
+      <div class="kira testimonial">
+        <img src="images/image-kira.jpg" alt="Profile Picture" class="profile-pic">
+        <h1 class="name text-black">Kira Whittle</h1>
+        <p class="verified text-black">Verified Graduate</p>
+        <p class="bold-testimonial text-black">Such a life-changing experience. Highly recommended!</p>
+        <p class="description text-dark-gray">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
+          professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
+          student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
+          did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
+          project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
+          could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
+          experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
+          100% recommend! ”</p>
+      </div>
+
+      <div class="patrick testimonial">
+        <img src="images/image-patrick.jpg" alt="Profile Picture" class="profile-pic">
+        <h1 class="name text-white">Patrick Abrams</h1>
+        <p class="verified text-white">Verified Graduate</p>
+        <p class="bold-testimonial text-white">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
+          learning from their experiences was easy.</p>
+        <p class="description text-gray">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
+          gave me the confidence necessary to be able to go out in the world and present myself as a capable 
+          junior developer. The standard is above the rest. You will get the personal attention you need from 
+          an incredible community of smart and amazing people. ”</p>
+      </div>
+
+      <div class="jeanette testimonial">
+        <img src="images/image-jeanette.jpg" alt="Profile Picture" class="profile-pic">
+        <h1 class="name text-black">Jeanette Harmon</h1>
+        <p class="verified text-black">Verified Graduate</p>
+        <p class="bold-testimonial text-black">An overall wonderful and rewarding experience</p>
+        <p class="description text-dark-gray">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
+          while doing something I love. ”</p>
+      </div>
+
+    </div>
   
 </body>
 </html>
